# PyDislocDyn

./: CONTRIBUTING.md  Doxyfile  LICENSE.md  Makefile  README.md  changelog.md  dislocations.py  dragcoeff_iso.py  dragcoeff_semi_iso.py  elasticconstants.py  ford.yml  fpm.toml  joss_pydislocdyn.bib  license.txt  linetension_calcs.py  metal_data.py  paper.md  phononwind.py  phononwindsubroutines.f95  polycrystal_averaging.py  pydislocdyn_examples.ipynb  pyproject.toml  readme.md  subroutines.f90
.github/workflows/: CI.yml  draft-pdf.yml
app/: dislocdyn.f90
joss_paper/: joss_pydislocdyn.bib  joss_pydislocdyn.md
manual/: custom.bbx  manual.bib  manual.tex
pydislocdyn/: __init__.py  _phononwind_numba.py  crystals.py  dislocations.f90  dislocations.py  dragcoeff_iso.py  dragcoeff_postprocess.py  dragcoeff_semi_iso.py  elasticconstants.f90  elasticconstants.py  linetension_calcs.py  metal_data.py  phononwind.f90  phononwind.py  polycrystal_averaging.py  readinputfiles.f90  runtests.f90  subroutines.f90  utilities.py
pydislocdyn/dislocations/: __init__.py  general.py  numba_subroutines.py  steadystate.py
testing/: runtests.f90  test_pydislocdyn.py  test_regression.py  test_unit.py
