[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.19"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['pydislocdyn','pydislocdyn.dislocations']
[tool.setuptools.package-data]
"*" = ["*.f90"]

[project]
name = "PyDislocDyn"
version = "1.3.3+dev"
authors = [
  { name="Daniel N. Blaschke", email="40176390+dblaschke-LANL@users.noreply.github.com" },
]
description = "PyDislocDyn is a suite of python programs designed to perform various calculations for basic research in dislocation dynamics in metals with various crystal symmetries in the continuum limit."
readme = {file = "readme.md", content-type = "text/markdown"}
license = {file = "license.txt"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD-3 License",
    "Private :: Do Not Upload",
]
dependencies = [
  "numpy>=1.19",
  "scipy>=1.9",
  "sympy>=1.9",
  "matplotlib>=3.3",
  "pandas>=1.3",
  "jinja2>=2.10",
]
[project.optional-dependencies]
fast = [
  "numba>=0.53",
  "joblib>=1.1",
  "threadpoolctl"
]

[project.urls]
Homepage = "https://github.com/dblaschke-LANL/PyDislocDyn"
Issues = "https://github.com/dblaschke-LANL/PyDislocDyn/issues"
